新增问卷调查

--- a/cell.html
+++ b/cell.html
@@ -1,7 +1,7 @@
 <!-- 
  * @Author: your name
  * @Date: 2019-12-07 10:04:35
- * @LastEditTime: 2019-12-07 10:31:21
+ * @LastEditTime: 2019-12-07 14:35:00
  * @LastEditors: Please set LastEditors
  * @Description: In User Settings Edit
  * @FilePath: \vue-meituansd:\myCode\example\example\cell.html -->
@@ -15,162 +15,308 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <link rel="stylesheet" href="https://res.wx.qq.com/open/libs/weui/2.0.1/weui.min.css">
+  <link rel="stylesheet" href="./weuix.css">
   <script type="text/javascript" src="https://res.wx.qq.com/open/libs/weuijs/1.2.1/weui.min.js"></script>
+  <script type="text/javascript" src="./vue.js"></script>
 </head>
 
 <body>
-  <!-- 列表组顶部说明文字 -->
-  <!-- <div class="weui-cells__title">列表页说明</div> -->
+  <div class="cell-body" id="box">
 
-  <!-- 带图标和说明的列表项 -->
-  <!-- <div class="weui-cells">
-    <div class="weui-cell">
-      <div class="weui-cell__hd"><img src="./marker.png" alt="" style="width:20px;margin-right:5px;display:block"></div>
-      <div class="weui-cell__bd">
-        <p>标题文字</p>
-      </div>
-      <div class="weui-cell__ft">说明文字</div>
+    <div class="weui-cells__title align">请填写问卷调查</div>
+    <h6>（一）HIV尿液自检前调查 </h6>
+    <div class="description">
+      您好！我们正在了解您对HIV（艾滋病病毒）尿液自检包的情况。请您放心，本次调查匿名，我们对您的回答采取保密原则，
+      也希望您的回答是代表您本人的真实情况。调查会占用您小于2分钟。非常感谢您的支持与配合！
     </div>
-  </div> -->
+    <h6>一、基本信息</h6>
+    <div class="weui-cells weui-cells_form">
+
+      <div class="weui-cell">
+        <div class="weui-cell__hd "><label for="" class="weui-label  weui-start" style="color: rgba(0,0,0,.5);
+            font-size: 14px;">1.出生日期</label></div>
+        <div class="weui-cell__bd">
+          <input class="weui-input" type="date" value="" />
+        </div>
+      </div>
+      <div class="weui-cell">
+        <div class="weui-cell__hd "><label for="" class="weui-label" style="color: rgba(0,0,0,.5);
+          font-size: 14px;">年龄</label></div>
+        <div class="weui-cell__bd">
+          <input class="weui-input" type="number" value="岁" placeholder="岁" />
+        </div>
+      </div>
+
+      <template v-for="(data,index) in list">
+        <div v-for="tl in data">
+          <div class="weui-cells__title weui-start">{{tl.title}}</div>
+          <div class="weui-form">
+            <div class="weui-form-li iblock" v-for="na in tl.name">
+              <input class="weui-form-checkbox" name="f2" id="g6" value=" " type="radio">
+              <label for="g1">
+                <i class="weui-icon-radio"></i>
+                <div class="weui-form-text">
+                  <p>{{na}}</p>
+                </div>
+              </label>
+            </div>
+          </div>
+        </div>
+      </template>
 
 
-  <div class="weui-cells__title">列表页问卷调查</div>
-  <div class="weui-cells weui-cells_form">
-    <div class="weui-cell">
-      <div class="weui-cell__hd"><label class="weui-label">qq</label></div>
-      <div class="weui-cell__bd">
-        <input class="weui-input" type="number" pattern="[0-9]*" placeholder="请输入qq号" />
+      <div style="text-align: center;margin-top: 20px;width: 100%;height: 80px;">
+        填表日期：<input type="text " placeholder="年/月/日">
+        <!-- 年<span></span>月<span></span>日 -->
       </div>
-    </div>
-    <div class="weui-cell weui-cell_vcode">
-      <div class="weui-cell__hd">
-        <label class="weui-label">手机号</label>
-      </div>
-      <div class="weui-cell__bd">
-        <input class="weui-input" type="tel" placeholder="请输入手机号">
-      </div>
-      <div class="weui-cell__ft">
-        <a href="javascript:;" class="weui-vcode-btn">获取验证码</a>
-      </div>
-    </div>
-    <div class="weui-cell">
-      <div class="weui-cell__hd"><label for="" class="weui-label">日期</label></div>
-      <div class="weui-cell__bd">
-        <input class="weui-input" type="date" value="" />
-      </div>
-    </div>
-    <div class="weui-cell">
-      <div class="weui-cell__hd"><label for="" class="weui-label">时间</label></div>
-      <div class="weui-cell__bd">
-        <input class="weui-input" type="datetime-local" value="" placeholder="" />
-      </div>
-    </div>
-    <div class="weui-cell weui-cell_vcode">
-      <div class="weui-cell__hd"><label class="weui-label">验证码</label></div>
-      <div class="weui-cell__bd">
-        <input class="weui-input" type="number" placeholder="请输入验证码" />
-      </div>
-      <div class="weui-cell__ft">
-        <img class="weui-vcode-img" src="./images/vcode.jpg" />
-      </div>
-    </div>
-  </div>
-  <div class="weui-cells__tips">底部说明文字底部说明文字</div>
 
-  <div class="weui-cells__title">表单报错</div>
-  <div class="weui-cells weui-cells_form">
-    <div class="weui-cell weui-cell_warn">
-      <div class="weui-cell__hd"><label for="" class="weui-label">卡号</label></div>
-      <div class="weui-cell__bd">
-        <input class="weui-input" type="number" pattern="[0-9]*" value="weui input error" placeholder="请输入卡号" />
-      </div>
-      <div class="weui-cell__ft">
-        <i class="weui-icon-warn"></i>
-      </div>
-    </div>
-  </div>
+      <div>
+        <h6>（二）HIV尿液自检后调查 </h6>
+        <div class="description">
+          您好！我们正在了解HIV（艾滋病病毒）尿液自检包的使用情况。请您放心，本次调查匿名，我们对您的回答采取保密原则，也希望您的回答是代表您本人的真实情况。调查会占用您小于5分钟。非常感谢您的支持与配合！
+        </div>
+        <h6>一、自检后的情况</h6>
+        <div class="weui-cells weui-cells_form">
 
-  <!-- <div class="weui-cells__title">开关</div>
-  <div class="weui-cells weui-cells_form">
-    <div class="weui-cell weui-cell_switch">
-      <div class="weui-cell__bd">标题文字</div>
-      <div class="weui-cell__ft">
-        <input class="weui-switch" type="checkbox" />
-      </div>
-    </div>
-  </div> -->
+          <template v-for="(data,index) in Two">
+            <div v-for="tl in data">
+              <div class="weui-cells__title weui-start">{{tl.title}}</div>
+              <div class="weui-form">
+                <div class="weui-form-li iblock" v-for="na in tl.name">
+                  <input class="weui-form-checkbox" name="f2" id="g6" value=" " type="radio">
+                  <label for="g1">
+                    <i class="weui-icon-radio"></i>
+                    <div class="weui-form-text">
+                      <p>{{na}}</p>
+                    </div>
+                  </label>
+                </div>
+              </div>
+            </div>
+          </template>
+          <h6>二、其他情况</h6>
+          <div class="weui-cells weui-cells_form">
 
-  <div class="weui-cells__title">文本框</div>
-  <div class="weui-cells">
-    <div class="weui-cell">
-      <div class="weui-cell__bd">
-        <input class="weui-input" type="text" placeholder="请输入文本" />
-      </div>
-    </div>
-  </div>
+            <template v-for="(data,index) in anthor">
+              <div v-for="tl in data">
+                <div class="weui-cells__title weui-start">{{tl.title}}</div>
+                <div class="weui-form">
+                  <div class="weui-form-li iblock" v-for="na in tl.name">
+                    <input class="weui-form-checkbox" name="f2" id="g6" value=" " type="radio">
+                    <label for="g1">
+                      <i class="weui-icon-radio"></i>
+                      <div class="weui-form-text">
+                        <p>{{na}}</p>
+                      </div>
+                    </label>
+                  </div>
+                </div>
+              </div>
+            </template>
+          </div>
 
-  <div class="weui-cells__title">文本域</div>
-  <div class="weui-cells weui-cells_form">
-    <div class="weui-cell">
-      <div class="weui-cell__bd">
-        <textarea class="weui-textarea" placeholder="请输入文本" rows="3"></textarea>
-        <div class="weui-textarea-counter"><span>0</span>/200</div>
-      </div>
-    </div>
-  </div>
+          <div style="float: right;margin-top: 20px;">
+            填表日期：<input type="text " placeholder="年/月/日">
+            <!-- 年<span></span>月<span></span>日 -->
+          </div>
 
-  <div class="weui-cells__title">选择</div>
-  <div class="weui-cells">
+        </div>
 
-    <div class="weui-cell weui-cell_select weui-cell_select-before">
-      <div class="weui-cell__hd">
-        <select class="weui-select" name="select2">
-          <option value="1">+86</option>
-          <option value="2">+80</option>
-          <option value="3">+84</option>
-          <option value="4">+87</option>
-        </select>
       </div>
-      <div class="weui-cell__bd">
-        <input class="weui-input" type="number" pattern="[0-9]*" placeholder="请输入号码" />
-      </div>
-    </div>
-  </div>
-  <div class="weui-cells__title">选择</div>
-  <div class="weui-cells">
-    <div class="weui-cell weui-cell_select">
-      <div class="weui-cell__bd">
-        <select class="weui-select" name="select1">
-          <option selected="" value="1">微信号</option>
-          <option value="2">QQ号</option>
-          <option value="3">Email</option>
-        </select>
-      </div>
-    </div>
-    <div class="weui-cell weui-cell_select weui-cell_select-after">
-      <div class="weui-cell__hd">
-        <label for="" class="weui-label">国家/地区</label>
-      </div>
-      <div class="weui-cell__bd">
-        <select class="weui-select" name="select2">
-          <option value="1">中国</option>
-          <option value="2">美国</option>
-          <option value="3">英国</option>
-        </select>
-      </div>
-    </div>
-  </div>
 
-  <label for="weuiAgree" class="weui-agree">
-    <input id="weuiAgree" type="checkbox" class="weui-agree__checkbox">
-    <span class="weui-agree__text">
-      阅读并同意<a href="javascript:void(0);">《相关条款》</a>
-    </span>
-  </label>
 
-  <div class="weui-btn-area">
-    <a class="weui-btn weui-btn_primary" href="./list.html" id="showTooltips">上传</a>
+    </div>
+
+    <div class="weui-btn-area">
+      <a class="weui-btn weui-btn_primary" href="./list.html" id="showTooltips">上传</a>
+    </div>
+    <!-- {{myData}} -->
   </div>
 </body>
 
 </html>
+<script>
+  new Vue({
+    el: '#box',
+    data: {
+      // myData: 'hello Vue',
+
+
+      list: [
+        [{
+            title: "2.您的文化程度是什么？",
+            name: ['小学', '初中', '高中或中专', '专科及以上', '本科及以上  '],
+
+          },
+          {
+            title: "3.您的职业是什么？",
+            name: ['公司员工', '个体经商', '家务或待业', '工人', '餐饮服务', '其他'],
+
+          },
+          {
+            title: '5.您的婚姻状况如何？',
+            name: ['已婚/同居', '未婚/单身', '分居/离异/丧偶'],
+
+          },
+          {
+            title: '6.您以前独自做过HIV自我检测吗？',
+            name: ['做过', '没做过'],
+
+          },
+          {
+            title: '7.在与性伴发生关系后，您首选哪种快检试剂做检测？',
+            name: ['指尖血检测试剂 ', '尿液检测试剂 ', '口腔检测试剂']
+
+          },
+          {
+            title: '7.在与性伴发生关系后，您首选哪种快检试剂做检测？',
+            name: ['指尖血检测试剂 ', '尿液检测试剂 ', '口腔检测试剂', '不确定']
+
+          },
+          {
+            title: '8.您从哪里获知我们这里提供“自己做HIV自我检测”服务？',
+            name: ['宣传海报', '卫生专业人员的咨询', '朋友', '网吧、贴吧', '微信、Blued、QQ群等', '其他']
+
+          },
+          {
+            title: '9.您认为HIV尿液自检试剂比其他试剂检测准确吗？',
+            name: ['是 ', '不，相似 ', '不确定']
+
+          },
+          {
+            title: '10.您是否愿意回传本次尿液自检的结果？',
+            name: ['愿意 ', '不愿意 ']
+
+          }
+
+        ]
+      ],
+      Two: [
+        [{
+            title: "1.您在哪里使用本次HIV尿液自检包？",
+            name: ['家里', '其他地方'],
+
+          },
+          {
+            title: "2.您觉得使用HIV尿液自检包不方便的地方是什么？ [多选题] ",
+            name: ['押金价格贵', '检测前、后需要寻求咨询服务', '对检测过程不会操作',
+              '不容易判读检测结果', '采集尿液不方便', ' 看不懂说明书或视频', '其他'
+            ],
+
+          },
+          {
+            title: '3.你觉得HIV尿液自检主要的优点是什么？ [多选题] ',
+            name: ['操作简单', '容易获得', '保护隐私', '可以自己决定检测时间和地点',
+              '可以将来推荐给性伴使用', '其他'
+            ],
+
+          },
+          {
+            title: '4.下一次如果您想知道自己的HIV感染状况，您最想在哪里做HIV检测？',
+            name: ['家里', '同志公益小组', '疾控中心', '医院', '血站或无偿献血点', '其他地方'],
+
+          },
+          {
+            title: '5.如果HIV自检是免费的，您首选哪种自检试剂检测？',
+            name: ['指尖血检测试剂', '指尖血检测试剂 ', '口腔检测试剂']
+
+          }
+
+        ]
+      ],
+      anthor: [
+        [{
+            title: "1.您平时获取HIV检测试剂的主要途径在哪里？",
+            name: ['网店购买', '同志公益小组', '疾控中心', '药店或同志用品店', '医院',
+              '通过朋友获得', '其他途径 '
+            ],
+
+          },
+          {
+            title: "2.您认为自己是哪种性恋？",
+            name: ['同性恋', '双性恋', '对检测过程不会操作', '其他'
+
+            ],
+
+          },
+          {
+            title: '3.您寻找性伴的最主要通过哪种途径？ ',
+            name: ['网络形式', '聚会形式', '场所形式，如聊天室、酒吧、桑拿浴室等', '其他'],
+
+          },
+          {
+            title: '4.您最近一次做HIV检测的时间在什么时候？',
+            name: ['3个月内', '4-6个月', '12个月', '7-12个月', '1年以上', '从未检测过'],
+
+          },
+          {
+            title: '5.您知道自己最近一次HIV检测的结果吗？   ',
+            name: ['阴性', '阳性 ', '不知道']
+
+          },
+          {
+            title: '6.您现在是哪种性角色？',
+            name: ['纯1', '纯2', ' 0.5或介于0和1之间', '其他'],
+
+          },
+          {
+            title: '7.您在过去3个月内与同性性伴发生肛交时有没有使用安全套？（不包含MB）',
+            name: ['每次都用', '有时使用', '从未使用', ],
+
+          },
+          {
+            title: '8.您未来与同伴发生性关系后会选择HIV尿液自检试剂给自己做快检吗？',
+            name: ['会', '不会 ', '不确定']
+
+          }
+
+
+        ]
+      ],
+
+    },
+    mounted() {
+      console.log(this)
+    }
+
+
+  });
+</script>
+<style>
+  * {
+    margin: 0;
+    padding: 0;
+  }
+
+  .cell-body {
+    width: 90%;
+    height: 100%;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  .align {
+    text-align: center;
+    margin-bottom: 10px;
+    color: black;
+  }
+
+  .description {
+    font-size: 0.1rem;
+    margin-top: 10px;
+    height: 70px;
+    float: left !important;
+    color: #5b6161;
+    margin-left: 20px;
+  }
+
+  .weui-cells {
+
+    font-size: 0.7rem !important;
+  }
+
+  .weui-form-text {
+    height: 25px;
+    line-height: 25px;
+  }
+</style>
