--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
       <i class="weui_icon_msg weui_icon_success"></i> -->
       <div class="weui-flex">
         <div class="weui-flex__item">
-          <img src="./images/icon_jl.svg" style="width: 30px;">
+          <img src="./images/1.png" style="width: 30px;">
           <h3>填表不用实名</h3>
           请按检测者的真实情况填写。你还可以具体了解我们怎样保护你的隐私。
         </div>
         <div class="weui-flex__item">
-          <img src="./images/icon_rzcg.svg">
+          <img src="./images/2.png" style="width: 36px;">
           <h3>原路返还补贴</h3>
           补贴申请成功后，补贴只返还到订购者的微信钱包，订购时请看清楚。
         </div>
         <div class="weui-flex__item">
-          <img src="./images/icon_rsgl.svg">
+          <img src="./images/3.png" style="width: 28px;">
           <h3>24小时相应</h3>
           提交申请后24小时内有专人判读结果并完成退款 (没有在淘宝收货的，需要先完成收货操作)。
         </div>
@@ -52,7 +52,7 @@
       <!-- mini 按钮 -->
       <div class="weui-flex ">
         <div class="weui-flex__item justify">
-          <a href="./cell.html" class="weui-btn weui-btn_mini weui-btn_primary">检测结果上传</a>
+          <a href="./first.html" class="weui-btn weui-btn_mini weui-btn_primary">检测结果上传</a>
         </div>
         <div class="weui-flex__item justify">
           <a href="./progress.html" class="weui-btn weui-btn_mini weui-btn_primary test">申请进度查询</a>
@@ -62,28 +62,7 @@
     </div>
 
 
-    <div class="weui-tabbar">
-      <a href="" class="weui-tabbar__item">
-        <img src="./images/icon_tabbar.png" alt="" class="weui-tabbar__icon">
-        <p class="weui-tabbar__label">Home</p>
-      </a>
-      <a href="" class="weui-tabbar__item">
-        <span style="position:relative;display:inline-block">
-          <img src="./images/icon_tabbar.png" alt="" class="weui-tabbar__icon">
-          <!-- weui-badge表示一个红色的展示区 -->
-          <span class="weui-badge" style="position:absolute;top:-6;right:-11px">8</span>
-        </span>
-        <p class="weui-tabbar__label">Demos</p>
-      </a>
-      <a href="" class="weui-tabbar__item">
-        <span style="position:relative;display:inline-block">
-          <img src="./images/icon_tabbar.png" alt="" class="weui-tabbar__icon">
-          <!-- weui-badge_dot小圆点，给一个相对于span的定位，放在右上角 -->
-          <span class="weui-badge weui-badge_dot" style="position:absolute;top:0;right:-6px"></span>
-        </span>
-        <p class="weui-tabbar__label">Donate</p>
-      </a>
-    </div>
+
   </div>
 </body>
 
