--- a/second.html
+++ b/second.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: your name
  * @Date: 2019-12-07 15:18:51
- * @LastEditTime: 2019-12-07 15:57:08
+ * @LastEditTime: 2019-12-07 16:33:07
  * @LastEditors: Please set LastEditors
  * @Description: In User Settings Edit
  * @FilePath: \vue-meituansd:\myCode\example\example\test.html
@@ -190,5 +190,10 @@
 
     color: #5b6161;
     margin-left: 20px;
+  }
+
+  .weui-form-text {
+    height: 25px;
+    line-height: 25px;
   }
 </style>
